--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 /*
+ *= require berniestrap/dist/css/bootstrap
+ *= require berniestrap/dist/css/bootstrap-theme
  *= require_tree .
  *= require_self
  */
